GitBook: [master] one page and one asset modified